[package]
name = "ncollpyde"
version = "0.19.0"
edition = "2018"

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39"] }
parry3d-f64 = { version = "0.25.3", features = ["dim3", "f64", "enhanced-determinism"] }
rayon = "1.7"
rand = "0.8"
rand_pcg = "0.3.1"
numpy = "0.27"
ndarray = { version = "0.16.1", features = ["rayon", "blas"] }

# ndarray is a dependency of numpy.
# There is currently no way to directly specify sub-dependency features;
# this addresses that.
# However, it raises a cargo warning and may be an error in future.
# At that point, we will need to rely directly on ndarray,
# ensuring that it is the same version as numpy uses.
# [dependencies.ndarray]
# features = ["rayon"]

[dev-dependencies]
stl_io = "0.8.4"
cargo-release = "0.25.19"

[lib]
name = "ncollpyde"
crate-type = ["cdylib"]

[package.metadata.release]
disable-publish = true
no-dev-version = true
